fix: replace spaces in start and end of string fix: z-index close btn

--- a/_sass/pages/documentation.scss
+++ b/_sass/pages/documentation.scss
@@ -1286,9 +1286,10 @@
         line-height: 32px;
       }
     }
-    .close {
-      z-index: 9;
-    }
+  }
+
+  &.modal-common .modal-content .modal-header .close {
+    z-index: 9;
   }
 
   .modal-body {
